# liqi

./: .gitignore  CMakeLists.txt  README.md
asset/: README.md
include/liqi/: main.h  mesh.h  model.h  shader.h  window.h
shader/: logl2_blend.frag.glsl  logl2_skybox.frag.glsl  logl2_skybox.vert.glsl  logl2_transparent.vert.glsl  logl_obj.frag.glsl  logl_obj.vert.glsl  logl_subj.frag.glsl
source/: logl.cc  logl2.cc
